# kahua-web

./: COPYING  ChangeLog  DIST  DIST_EXCLUDE  Makefile.in  README  adduser.scm  configure.ac  init.scm  kahua-web-adduser.scm  kahua-web-lsuser.scm  lsuser.scm  mkscript
kahua-web/: comment.kahua  history.kahua  history.scm  kahua-web-local.css  kahua-web.css  kahua-web.kahua  local.kahua  login.kahua  macro.kahua  mailform.kahua  rss-reader.scm  rss.kahua  search.kahua  upload.kahua  version.kahua.in  wiliki.scm
plugin/: rss-reader.scm
plugins/: history.scm  kahua-web-modules.scm  rss-reader.scm  wiliki.scm
scripts/: kahua-web-user.scm
templates/: standard-page.xml
test/: test.conf  test.scm.in
utils/: kahua-objview
utils/objview/: README.eucjp  kahua-objview
